[package]
name = "reproducer"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.4"
once_cell = "1.4"

[profile.release]
debug = false
lto = "thin"